# HAR_classifier

./: .gitignore  README.md  pyproject.toml
code/data/: apply_crop.py  detect_crop_points.py  extract_features.py  generate_windows.py  normalize_features.py  prepare_nanoedge_data.py  split_train_val_test.py
code/inference/: inference_neai.py  inference_onnx.py
code/model/: analyze_feature_importance.py  export_model_onnx.py  train_random_forest.py
code/utils/: run_training_pipeline.py  visualize_interactive.py
data/processed/cropped/0_walking/: Accelerometer.csv  Gyroscope.csv
data/processed/cropped/1_sitting/: Accelerometer.csv  Gyroscope.csv
data/processed/cropped/2_running/: Accelerometer.csv  Gyroscope.csv
data/processed/cropped/3_falling/: Accelerometer.csv  Gyroscope.csv
data/processed/features/0_walking/: walking.csv  walking_test.csv  walking_test_normalized.csv  walking_train.csv  walking_train_normalized.csv  walking_val.csv  walking_val_normalized.csv
data/processed/features/1_sitting/: sitting.csv  (+6 more)
data/raw/0_walking/: Gyroscope.csv
data/raw/2_running/: Gyroscope.csv
docs/: QUICK_START.md  README.md
lib/reev_har/: __init__.py  data_loading.py  feature_extraction.py  plotting.py  signal_detection.py  windowing.py
metrics/: crop_config.csv  crop_params_per_class.json  feature_importance.csv  feature_importance_named.csv  neai_validation_results.json  random_forest_metrics.json
model_weights/: random_forest_model.onnx  random_forest_model.pkl
model_weights/NEAI_libneai_project-2026-06-27-20-35_1/: NanoEdgeAI.h  metadata.json
(+30 files in other folders)
