[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reev-har"
version = "0.1.0"
description = "Human Activity Recognition pipeline for Reev assessment"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.3.0",
  "scipy>=1.15.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.2",
  "plotly>=5.24.0",
  "scikit-learn>=1.7.0",
  "onnx>=1.18.0",
  "onnxruntime>=1.23.0",
  "skl2onnx>=1.19.0",
  "joblib>=1.4.2",
  "pyarrow>=16.0.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "pytest>=8.3.5",
  "ruff>=0.9.10",
  "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
